--- a/src/components/SignUp/index.css
+++ b/src/components/SignUp/index.css
@@ -1,12 +1,32 @@
-.profileInfo {
-    font-family: 'Lucida Console';
-    font-size: 64px;
+.boxed {    
+    text-align: center;
+}
+
+.SignUp {
+    font-family: 'Trebuchet MS';
+    font-size: 36px;
     text-align: center;
 }
 
 input {
-    width: 50%;
+    width: 25%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
+    text-align: center;
+}
+
+body {
+    background-image: url(https://thumbs.dreamstime.com/z/student-study-group-21490165.jpg)
+}
+
+.button {
+    background-color: #4caf50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
